# DrivingFramework

./: .atom-dbg.cson  .atom-gdb.json  .gdbinit  .gitignore  LICENSE  README.md  config.yaml  joint_states_26-06-2018_13-33-48.txt__2018_06_26__13_33_48.mat  joint_states_26-06-2018_13-34-06.txt__2018_06_26__13_34_06.mat  joint_states_26-06-2018_13-34-37.txt__2018_06_26__13_34_37.mat  joint_states_26-06-2018_13-39-43.txt__2018_06_26__13_39_43.mat  joint_states_26-06-2018_13-40-15.txt__2018_06_26__13_40_15.mat  joint_states_26-06-2018_13-43-54.txt__2018_06_26__13_43_54.mat  joint_states_26-06-2018_13-44-56.txt__2018_06_26__13_44_56.mat  odometry_26-06-2018_13-34-06.txt__2018_06_26__13_34_06.mat  odometry_26-06-2018_13-34-37.txt__2018_06_26__13_34_37.mat  odometry_26-06-2018_13-39-30.txt__2018_06_26__13_39_30.mat  odometry_26-06-2018_13-39-43.txt__2018_06_26__13_39_43.mat  odometry_26-06-2018_13-40-15.txt__2018_06_26__13_40_15.mat  odometry_26-06-2018_13-43-54.txt__2018_06_26__13_43_54.mat  odometry_26-06-2018_13-44-56.txt__2018_06_26__13_44_56.mat  wheeled_motion_12-06-2018_16-53-01.txt
configs/: CMakeLists.txt  package.xml
configs/configs/: config_centauro.yaml
configs/configs/joint_map/: centauro.yaml
configs/mwoibn/configs/: mwoibn_2_5.yaml  mwoibn_2_5.yaml.orig  mwoibn_3.yaml  mwoibn_v2.yaml  mwoibn_v3.yaml  mwoibn_xbot.yaml  mwoibn_xbot_new.yaml
configs/mwoibn/srdf/: centauro_full_wheels.srdf
configs/mwoibn/urdf/: __centauro_upper_body.urdf  centauro.urdf  centauro_lower_body.urdf  centauro_new.urdf
configs/xbot/: centauro.srdf  centauro.urdf
configs/xbot/higher/: centauro_working_aug_2018.yaml  simulaton.yaml
configs/xbot/joint_map/: centauro.yaml
configs/xbot/lower/: centauro.yaml  centauro_low.yaml  impedance.yaml
controllers/communication/: CMakeLists.txt  package.xml
controllers/communication/config/: FindXBotCore-interfaces.cmake  FindXBotInterface.cmake
controllers/communication/src/: basic_handler.cpp  events_handler.cpp  gazebo_base_to_RT.cpp  gazebo_base_transform.cpp  gravity_test_communication.cpp  odometry_to_RT.cpp  wheels_refs.cpp
controllers/controllers/: CMakeLists.txt  package.xml
controllers/controllers/controllers_centralized/: CMakeLists.txt  package.xml
controllers/controllers/controllers_ik/: CMakeLists.txt  package.xml
controllers/controllers/controllers_joint_states/: CMakeLists.txt  package.xml
controllers/controllers/controllers_misc/: CMakeLists.txt  CMakeLists.txt.orig  package.xml
controllers/controllers/controllers_wheels/: CMakeLists.txt  package.xml
controllers/controllers/src/: centralized_controller.cpp  compliance_compensation.cpp  ik_base.cpp  joint_states.cpp  online_centralized_controller.cpp  steering.cpp  steering_v2.cpp  steering_v3.cpp  steering_v4.cpp  steering_v5.cpp  steering_v6.cpp  steering_v7.cpp  steering_v8.cpp  upper_body_IK.cpp  wheeled_motion.cpp  wheeled_motion_actions.cpp  wheeled_motion_com.cpp  wheeled_motion_event.cpp  wheeled_motion_event_v2.cpp  wheeled_motion_event_v3.cpp  wheeled_motion_full.cpp  wheeled_motion_merge_v1.cpp  wheeled_motion_world.cpp  wheeled_references.cpp  wheeled_references_v2.cpp  wheeled_references_v3.cpp  wheels_controller.cpp  wheels_controller_extend.cpp  wheels_reactif.cpp  wheels_second_order.cpp  wheels_zmp.cpp  wheels_zmp_II.cpp  wheels_zmp_III.cpp  wheels_zmp_IV.cpp
controllers/higher_level/: CMakeLists.txt  package.xml
controllers/higher_level/src/: merge_manager.cpp  qp_aggravated.cpp  qr_joint_space.cpp  qr_joint_space_v2.cpp  qr_task.cpp  qr_tracking.cpp  state_machine.cpp  state_machine_II.cpp  state_machine_III.cpp  state_machine_IV.cpp  steering_reactif.cpp  steering_shape.cpp  steering_v2.cpp  steering_v4.cpp  steering_v5.cpp  steering_v6.cpp  steering_v7.cpp  steering_v8.cpp  support_shaping.cpp  support_shaping_v2_0.cpp  support_shaping_v3_0.cpp  support_shaping_v4_0.cpp  support_shaping_v5_0.cpp  support_shaping_v6_0.cpp
controllers/modules/: CMakeLists.txt  package.xml
controllers/nrt_software/: CMakeLists.txt  config.h.in  package.xml
controllers/nrt_software/configs/: centralized_controller.yaml
controllers/nrt_software/plugins_centralized/: CMakeLists.txt  config.h.in  package.xml
controllers/nrt_software/plugins_ik/: CMakeLists.txt  package.xml
controllers/nrt_software/plugins_joint_states/: CMakeLists.txt  package.xml
controllers/nrt_software/plugins_misc/: CMakeLists.txt  package.xml
controllers/nrt_software/plugins_shared/: CMakeLists.txt  package.xml
controllers/nrt_software/plugins_state_estimation/: CMakeLists.txt  CMakeLists.txt.orig  package.xml
controllers/nrt_software/plugins_wheels/: CMakeLists.txt  package.xml
controllers/nrt_software/src/: center_of_mass_controller.cpp  centralized_controller.cpp  collision_check.cpp  com_test.cpp  contact_test.cpp  gravity_test.cpp  hierarchical_controller_with_events.cpp  joint_states.cpp  joint_states_copy.cpp  my_test.cpp  odometry.cpp  online_centralized_controller.cpp  simple_trajectory.cpp  wheeled_locomotion_v6.cpp  wheeled_motion_run.cpp  wheels_cut.cpp  wheels_cut_v2.cpp  wheels_event.cpp  wheels_full.cpp  wheels_support.cpp
controllers/odometry/: CMakeLists.txt  package.xml
controllers/odometry/src/: odometry.cpp
controllers/plugins/: CMakeLists.txt  package.xml
controllers/plugins/config/: FindXCM.cmake
controllers/plugins/src/: generator.cpp  ros.cpp  ros_base.cpp  ros_shared.cpp  xbot_base.cpp  xbot_base_v2.cpp  xbot_shared.cpp
controllers/state_estimation/: CMakeLists.txt  package.xml
controllers/state_estimation/src/: odometry.cpp  (+6 more)
controllers/utils/: CMakeLists.txt  package.xml
controllers/xbot_plugins/: CMakeLists.txt  package.xml  reset
locomotion_framework/common/: CMakeLists.txt  package.xml
locomotion_framework/filters/: CMakeLists.txt  package.xml
locomotion_framework/point_handling/: CMakeLists.txt  package.xml
locomotion_framework/reference_generation/: CMakeLists.txt  package.xml
locomotion_framework/robot_point_handling/: CMakeLists.txt  package.xml
locomotion_framework/simple_log/: CMakeLists.txt  package.xml
(+956 files in other folders)
