cmake_minimum_required(VERSION 2.8.3)
project(configs)


set (VERSION_MAJOR 0)
set (VERSION_MINOR 1)
set (LOG_INFO ${PROJECT_NAME})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

find_package(catkin REQUIRED COMPONENTS
)


MESSAGE( WARNING "CMAKE_INSTALL_PREFIX: " ${CMAKE_INSTALL_PREFIX} )
MESSAGE( WARNING "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )

catkin_package(
  INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} ${catkin_INCLUDE_DIRS}
  LIBRARIES
  CATKIN_DEPENDS
  DEPENDS
)

include_directories(
  include
  ${catkin_INCLUDE_DIRS}
)

## Mark executables and/or libraries for installation
# install(TARGETS ${INSTALL_TARGETS}
#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

# Mark cpp header files for installation
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/mgnss/
   #FILES_MATCHING PATTERN ""
   PATTERN "package.xml" EXCLUDE
   PATTERN "CMakeLists.txt" EXCLUDE
   PATTERN "setup.py" EXCLUDE
   PATTERN ".svn" EXCLUDE
 )
